added DropDownButton, ButtonSpinner, and SplitButton examples to the Sample application

--- a/ExtendedWPFToolkitSolution/Src/Samples/Samples/Shell.xaml
+++ b/ExtendedWPFToolkitSolution/Src/Samples/Samples/Shell.xaml
@@ -25,8 +25,9 @@
 
                 <Border CornerRadius="5" BorderBrush="#FF666666" BorderThickness="1" >
                     <TreeView prism:RegionManager.RegionName="{x:Static inf:RegionNames.NavigationRegion}" 
-                          infCommands:TreeViewSelected.Command="{Binding NavigateCommand}" 
-                          BorderBrush="{x:Null}" MinWidth="200" Margin="3">
+                              infCommands:TreeViewSelected.Command="{Binding NavigateCommand}" 
+                              BorderBrush="{x:Null}" MinWidth="225" Margin="3"
+                              Loaded="TreeView_Loaded">
                         <TreeView.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                 <GradientStop Color="#A1000000" Offset="0" />
