--- a/Main/Source/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Button/Views/DropDownButtonView.xaml
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Button/Views/DropDownButtonView.xaml
@@ -1,9 +1,14 @@
-﻿<infControls:DemoView x:Class="Samples.Modules.Button.Views.SplitButtonView"
+﻿<infControls:DemoView x:Class="Samples.Modules.Button.Views.DropDownButtonView"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:infControls="clr-namespace:Samples.Infrastructure.Controls;assembly=Samples.Infrastructure"
+                      xmlns:infConverters="clr-namespace:Microsoft.Windows.Controls.Core.Converters;assembly=WPFToolkit.Extended"
                       xmlns:extToolkit="http://schemas.microsoft.com/winfx/2006/xaml/presentation/toolkit/extended"
-                      Title="SplitButton">
+                      Title="DropDownButton" >
+    <infControls:DemoView.Resources>
+        <infConverters:InverseBoolConverter x:Key="InverseBoolConverter" />
+    </infControls:DemoView.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -11,7 +16,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="The SplitButton control is a button that can be clicked and also provides a drop down in which you can place any custom content within."
+        <TextBlock Text="The DropDownButton control is a button that when clicked displays a drop down in which you can place any custom content within."
                    TextWrapping="Wrap" />
 
         <GroupBox Header="Features" Grid.Row="1" Margin="5"  >
@@ -26,22 +31,21 @@
                 </Grid.ColumnDefinitions>
 
                 <TextBlock Text="IsOpen: " VerticalAlignment="Center"  />
-                <CheckBox x:Name="_isOpen" Grid.Column="1" IsChecked="False" VerticalAlignment="Center" Margin="5" ClickMode="Press" ToolTip="Get/Sets a value indicating whether or not the drop down is open."/>
+                <CheckBox x:Name="_isOpen" Grid.Column="1" IsChecked="False" VerticalAlignment="Center" Margin="5" ClickMode="Press" ToolTip="Get/Sets a value indicating whether or not the drop down is open." />
             </Grid>
         </GroupBox>
 
         <StackPanel Grid.Row="2" Margin="10">
             <TextBlock Text="Usage:" Style="{StaticResource Header}" />
-            <extToolkit:SplitButton x:Name="_splitButton" Margin="10" Width="150" HorizontalAlignment="Left" Content="Click Me" IsOpen="{Binding IsChecked, ElementName=_isOpen, Mode=TwoWay}"
-                                    Click="SplitButton_Click">
-                <extToolkit:SplitButton.DropDownContent>
+            <extToolkit:DropDownButton x:Name="_dropDownButton" Margin="10" Width="150" HorizontalAlignment="Left" Content="Click Me" IsOpen="{Binding IsChecked, ElementName=_isOpen, Mode=TwoWay}"
+                                       Click="DropDownButton_Click">
+                <extToolkit:DropDownButton.DropDownContent>
                     <StackPanel>
                         <extToolkit:ColorCanvas />
                         <Button Click="Button_Click" Margin="10">OK</Button>
                     </StackPanel>
-                </extToolkit:SplitButton.DropDownContent>
-            </extToolkit:SplitButton>
-            
+                </extToolkit:DropDownButton.DropDownContent>
+            </extToolkit:DropDownButton>
         </StackPanel>
     </Grid>
 </infControls:DemoView>
