--- a/Main/Source/ExtendedWPFToolkitSolution_35/Src/WPFToolkit.Extended/MultiLineTextEditor/Themes/Generic.xaml
+++ b/Main/Source/ExtendedWPFToolkitSolution_35/Src/WPFToolkit.Extended/MultiLineTextEditor/Themes/Generic.xaml
@@ -6,6 +6,8 @@
 
     <coreConverters:InverseBoolConverter x:Key="InverseBoolConverter" />
 
+    <Image x:Key="DefaultContent" x:Shared="False" Height="16" Width="18" Source="/WPFToolkit.Extended;component/MultiLineTextEditor/Images/Notes16.png" />
+
     <LinearGradientBrush x:Key="PopupDarkBorderBrush" EndPoint="0.5,1" StartPoint="0.5,0">
         <GradientStop Color="#FFA3AEB9" Offset="0"/>
         <GradientStop Color="#FF8399A9" Offset="0.375"/>
@@ -58,8 +60,6 @@
         </Setter>
     </Style>
 
-    <Image x:Key="ImageContent" Height="16" Width="18" Source="/WPFToolkit.Extended;component/MultiLineTextEditor/Images/Notes16.png" />
-
     <Style TargetType="{x:Type local:MultiLineTextEditor}">
         <Setter Property="Background" Value="White"/>
         <Setter Property="BorderBrush">
@@ -73,7 +73,7 @@
             </Setter.Value>
         </Setter>
         <Setter Property="BorderThickness" Value="1,1,0,1" />
-        <Setter Property="Content" Value="{StaticResource ImageContent}" />
+        <Setter Property="Content" Value="{StaticResource DefaultContent}" />
         <Setter Property="Focusable" Value="False" />
         <Setter Property="Padding" Value="2,0,0,0" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
