--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/MultiLineTextEditor/Themes/Generic.xaml
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/MultiLineTextEditor/Themes/Generic.xaml
@@ -6,6 +6,8 @@
 
     <coreConverters:InverseBoolConverter x:Key="InverseBoolConverter" />
 
+    <Image x:Key="DefaultContent" x:Shared="False" Height="16" Width="18" Source="/WPFToolkit.Extended;component/MultiLineTextEditor/Images/Notes16.png" />
+
     <LinearGradientBrush x:Key="PopupDarkBorderBrush" EndPoint="0.5,1" StartPoint="0.5,0">
         <GradientStop Color="#FFA3AEB9" Offset="0"/>
         <GradientStop Color="#FF8399A9" Offset="0.375"/>
@@ -71,11 +73,7 @@
             </Setter.Value>
         </Setter>
         <Setter Property="BorderThickness" Value="1,1,0,1" />
-        <Setter Property="Content">
-            <Setter.Value>
-                <Image Height="16" Width="18" Source="/WPFToolkit.Extended;component/MultiLineTextEditor/Images/Notes16.png" />
-            </Setter.Value>
-        </Setter>
+        <Setter Property="Content" Value="{StaticResource DefaultContent}" />
         <Setter Property="Focusable" Value="False" />
         <Setter Property="Padding" Value="2,0,0,0" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
